--- a/examples/example.css
+++ b/examples/example.css
@@ -1,10 +1,11 @@
-html, body, #map{
-  width:100%;
-  height:80%;
-  overflow:hidden;
+html, body {
+  height: 100%;
+  padding: 0;
+  margin: 0;
 }
 
-#map{
+#map {
+  width: 100%;
+  height: 100%;
   z-index:1;
-  top:0; bottom:0;
 }
