--- a/examples/package/example.scss
+++ b/examples/package/example.scss
@@ -3,14 +3,19 @@
 @import '../../../node_modules/ol/ol.css';
 @import '../../../dist/comparisontools.css';
 
-html, body, #map{
+html, body {
   width:100%;
-  height: 550px;
+  height: 100%;
   overflow:hidden;
 }
 
+
+#map-container {
+  height: calc(100% - 50px);
+}
+
 #map{
-  height: 500px;
+  height: 100%;
   z-index:1;
   top:0; bottom:0;
 }
